add_executable(
        day1
        day1.cc
        day1.h)
conan_target_link_libraries(day1)

add_executable(
        day2
        day2.cc
        day2.h)
conan_target_link_libraries(day2)

add_executable(
        day3
        day3.cc
        day3.h)
conan_target_link_libraries(day3)

add_executable(
        day4
        day4.cc
        day4.h)
conan_target_link_libraries(day4)
