add_executable(
        day1
        day1.cc
        day1.h)
conan_target_link_libraries(day1)

add_executable(
        day2
        day2.cc
        day2.h)
conan_target_link_libraries(day2)

add_executable(
        day3
        day3.cc
        day3.h)
conan_target_link_libraries(day3)

add_executable(
        day4
        day4.cc
        day4.h)
conan_target_link_libraries(day4)

add_executable(
        day5
        day5.cc
        day5.h)
conan_target_link_libraries(day5)

add_executable(
        day6
        day6.cc
        day6.h)
conan_target_link_libraries(day6)

add_executable(
        day7
        day7.cc
        day7.h day7_main.cc)
conan_target_link_libraries(day7)

add_executable(
        day8
        day8.cc
        day8.h)
conan_target_link_libraries(day8)

add_executable(
        day9
        day9.cc
        day9.h)
conan_target_link_libraries(day9)

add_executable(
        day10
        day10.cc
        day10.h)
conan_target_link_libraries(day10)

add_executable(
        day11
        day11.cc
        day11.h)
conan_target_link_libraries(day11)
